# toid

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  toid.cpp
pytoid/: Cargo.toml  setup.py
pytoid/examples/: client.py  melody.py  server.py
pytoid/src/: lib.rs  sf2.rs  state.rs
pytoid/src/outputters/: portaudio_outputter.rs
pytoid/src/players/: local_player.rs  mod.rs  toid_player_holder.rs  websocket_player.rs
pytoid/toid/: __init__.py
toid/: Cargo.toml  README.md
toid/src/: lib.rs  main.rs  music_state_manager.rs  portaudio_outputter.rs  run_client.rs  run_server.rs  sf2.rs  sound_output.rs  state.rs
toid/src/data/: riff.rs
toid/src/data/sf2/: generator_enum.rs  info.rs  mod.rs  pdta.rs  sdta.rs  sf2.rs
toid/src/data/sf2/own/: generator.rs  instrument.rs  mod.rs  preset.rs  sample.rs  sf2.rs
toid/src/high_layer_trial/: mod.rs  num_lang.rs
toid/src/music_state/: beat.rs  melody_state.rs  music_state.rs  scheduling_state.rs  sf2_state.rs  wave_reader.rs
toid/src/music_store/: beat.rs  melody_state.rs  mod.rs  music_store.rs  new_music_store.rs  scheduling_state.rs  wave_reader.rs
toid/src/new_music_store/: melody_state.rs  mod.rs  new_music_store.rs  scheduling_state.rs  sf2_state.rs  wave_reader.rs
toid/src/new_state_management/: mod.rs  store.rs
toid/src/outputters/: mod.rs  portaudio_outputter.rs
toid/src/player/: player.rs
toid/src/players/: mod.rs  player.rs
toid/src/players/local_player/: mod.rs  player.rs
toid/src/players/websocket_player/: mod.rs  player.rs  send_data.rs  server.rs
toid/src/reducers/: default_reducer.rs  mod.rs  websocket_reducer.rs
toid/src/resource_management/: mod.rs  resource_manager.rs  resource_unit.rs
toid/src/serialize/: json.rs
toid/src/state_management/: hashmap_state.rs  mod.rs  reducer.rs  serialize.rs  state.rs  store.rs  store_reader.rs
toid/src/states/: mod.rs
toid/src/states/flex_state/: hashmap_state.rs  mod.rs
toid/src/states/music_state/: melody_state.rs  mod.rs  scheduling_state.rs  sf2_state.rs
toid/src/stores/: default_store.rs  mod.rs  normal_store.rs
toid/src/stores/websocket_store/: mod.rs  server.rs  store.rs
toid/src/tests/: mod.rs
(+142 files in other folders)
