[package]
name = "toid"
license = "MIT"
version = "0.0.0-alpha"
authors = ["masashi yoshikawa <earnest.marshi@gmail.com>"]
description = "live coding tool"

[dependencies]
im = "14.0.0"
portaudio = "0.7.0"
ws = "0.9.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
nom = "5.1.1"
toml = "0.4.2"
serde_derive = "1.0.106"

[[bin]]
name = "main"
path = "src/main.rs"
