[package]
name = "toid"
license = "MIT"
version = "0.3.0-alpha"
authors = ["masashi yoshikawa <earnest.marshi@gmail.com>"]
description = "live coding tool"
edition = "2018"

[dependencies]
im = "14.0.0"
portaudio = "0.7.0"
ws = { version = "0.9.1", features = ["ssl"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
nom = "5.1.1"
toml = "0.4.2"
serde_derive = "1.0.106"
openssl = "0.10"
base64 = "0.12.0"
url = "2.0.0"
log = "0.4.8"
rand = "0.7.3"
