[package]
name = "pytoid"
version = "0.1.0"
authors = ["masashi yoshikawa <earnest.marshi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3={ version = "0.8.4", features = ["extension-module"] }
toid={ path = "../toid" }