[package]
name = "toid"
version = "0.1.0"
authors = ["masashi yoshikawa <earnest.marshi@gmail.com>"]
edition = "2018"

[dependencies]
im = "14.0.0"
portaudio = "0.7.0"
ws = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nom = "5"
toml = "0.4.2"
serde_derive = "1.0.106"

[[bin]]
name = "main"
path = "src/main.rs"
